# Bot

./: .editorconfig  .gitignore  .pylintrc  exportenv.sh  flowers.json  main.py  pyproject.toml  requirements.txt  setup.cfg  wheather.py
database/: conection.py  connection.py  predefined.py  queries.py
