[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Skilex123 <skilex57@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
pyTelegramBotAPI = "^4.9.0"
psycopg2-binary = "^2.9.5"
isort = "^5.11.4"
flake8 = "^6.0.0"
mypy = "^0.991"
pylint = "^2.15.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
